probando estilos en index.html y denver-omelet.html

--- a/recipes/denver-omelet.html
+++ b/recipes/denver-omelet.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Denver Omelet</title>
+    <link rel="stylesheet" href="recipes-styles.css">
 </head>
 <body>
-    <h1>Denver Omelet</h1>
+    <h1 class="main">Denver Omelet</h1>
     <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2022%2F06%2F02%2F5282057-the-denver-omelet-Chef-John-1x1-1.jpg&q=60&c=sc&poi=auto&orient=true&h=512" alt="Denver Ommelet" width="300" height="300">
     <h3>Description</h3>
     <p>The Denver omelet is a change of pace from a French omelet and is known for its firmer texture and caramelized flavor. It's one of the first foods I learned to cook professionally as a line cook in high school. Make it a complete lunch or dinner with arugula salad and toasted bread</p>
     <h3>Ingredients</h3>
-    <ul>
+    <ul class="ingred">
         <li>3 large eggs</li>
         <li>1 tablespoon butter</li>
         <li>1/4 cup diced smoked ham</li>
@@ -22,7 +23,7 @@
         <li>1 pinch cayenne pepper</li>
     </ul>
     <h3>Directions</h3>
-    <ol>
+    <ol class="direct">
         <li>Beat eggs in a small bowl until just combined; do not overbeat.</li>
         <li>Melt butter in a skillet over medium-high heat. Add ham, onion, and bell pepper; season with salt and pepper. Cook and stir until onions soften and ham begins to caramelize, about 5 minutes.</li>
         <li>Reduce heat to medium-low and pour in eggs. Mix briefly with a spatula while shaking the pan to ensure ingredients are evenly distributed. Quickly run the spatula along edges of omelet. Sprinkle Cheddar cheese and cayenne pepper over omelet.</li>
