--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
+    <h1 class="main">Odin Recipes</h1>
+    <ul class="list-recipes">
         <li><a href="/recipes/denver-omelet.html">Denver Omelet</a></li>
         <li><a href="/recipes/baked-honey-mustard-chicken.html">Backed Honey Mustard Chicken</a></li>
         <li><a href="/recipes/easy-tuna-patties.html">Easy Tuna Patties</a></li>
